--- a/cap03/projeto/estilos/principal.css
+++ b/cap03/projeto/estilos/principal.css
@@ -4,6 +4,8 @@ body{
 h1{
     color: #C0262C;
     font-size: 2.5em; /* 40/16=2.5 */
+    border-bottom: #C0262C solid thin;
+    padding-bottom: 7px;
 } 
 h2{
     font-size: 1.75em; /* 28/16=1.75 */
