--- a/cap05/projeto/estilos/principal.css
+++ b/cap05/projeto/estilos/principal.css
@@ -30,3 +30,28 @@ border-color: #C0262C;
 body { 	
 font-family: Helvetica, Arial, sans-serif; 
 }
+/* página produtos - tabela */
+#produtos table {
+    width: 600px;
+    margin: 50px auto 30px;
+    text-align: center;
+    border-collapse: collapse;
+}
+#produtos th, #produtos td {
+    border: #999 solid 1px;
+    padding: 5px;
+}
+#produtos caption {
+    background-color: #999;
+    color: #fff;
+    padding: 15px 0;
+    font-size: 1.5em;
+}
+#produtos td[colspan] {
+    font-style: italic;
+    font-weight: bold;
+    color: #999;
+}
+#produtos tr:hover {
+    background-color: #FEFF76;
+}
