--- a/cap05/projeto/estilos/principal.css
+++ b/cap05/projeto/estilos/principal.css
@@ -143,3 +143,37 @@ input[type="submit"] {
     font-size: 1.2em;
     border: #000 solid 1px;
 }
+#banhoEtosa fieldset label.labelSimples {
+    display: inline;
+    float: none;
+}
+#banhoEtosa p {
+    text-align: left;
+}
+#banhoEtosa p::first-line {
+    font-size: inherit;
+    font-variant: inherit;
+    font-weight: inherit;
+    font-style: inherit;
+}
+#banhoEtosa main h2 {
+    background: #FEF84F url(../multimidia/postit.jpg) no-repeat top left;
+    color: #000;
+    padding: 35px;
+    /*padding: 35 para cada um dos 4 lados, tamanho do postit: 277x185px*/
+    width: 207px;
+    /* 35+35=70 > 277-70=207 */
+    height: 115px;
+    /* 35+35=70 > 185-70=115 */ 
+    font-size: 1.3125em;
+    /* 21/16=1.3125em */
+    letter-spacing: .07em;
+}
+/* página quem somos */
+#quemSomos main img {
+    float: left;
+    margin: 0 20px 20px 0;
+    padding: 10px;
+    border: solid #C0262C thin;
+    background-color: #fff;
+}
