--- a/cap05/projeto/estilos/principal.css
+++ b/cap05/projeto/estilos/principal.css
@@ -1,4 +1,5 @@
-h1 {
+/* textos da página principal*/
+main h1 {
     color: #C0262C;
 	font-size: 2.5em; /* 40/16=2.5 */
 border-bottom: #C0262C solid thin;
@@ -6,7 +7,7 @@ padding-bottom: 7px;
 
 }
 
-h2 {
+main h2 {
     font-size: 1.75em; /* 28/16=1.75 */
     background: #C0262C url(../multimidia/back-bolinha.gif) repeat top center;
     color: #fff;
@@ -15,20 +16,20 @@ h2 {
     width: 316px;
 }
 
-p { 	
+main p { 	
 font-size: 1.1em; 	
 line-height: 1.3em; 	
 text-align: justify; 
 }
 
-p:first-line {
+main h2+p:first-line {
 font-size: 1.17em;
 font-variant: small-caps;
 font-weight: bolder;
 font-style: italic;
 }
 
-hr {
+main hr {
 border-color: #C0262C;
 }
 
