--- a/cap05/projeto/estilos/principal.css
+++ b/cap05/projeto/estilos/principal.css
@@ -1,3 +1,106 @@
+/*estrutura*/
+body{
+    width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
+}
+header h1{
+    width: 240px;
+    float: left;
+    background-image: url(../multimidia/meu-amigo-cao-petshop-header.png);
+    background-repeat: no-repeat;
+    background-position: center center;
+    height: 200px;
+    text-indent: -1000px;
+    margin-bottom: 0px;
+}
+header #anuncio {
+    width: 510px;
+    float: left;
+    margin: 80px auto auto;
+    padding-top: 0px;
+}
+header section {
+    padding-top: 70px;
+}
+header section a[href="boletim.html"] {
+    border: solid #C0262C thin;
+    padding: 15px;
+    border-radius: 15px;
+    color: #C0262C;
+    text-decoration: none;
+    font-size: 1.1em;
+}
+header section p {
+    color: #999999;
+    margin: 33px auto 7px;
+}
+header section figure {
+    width: 100%;
+    margin: 0px;
+}
+header section figure a {
+    padding: 25px 5px 0;
+    border: none;
+}
+header section figure a:first-child {
+    padding: 25px 5px 0 0;
+}
+header section figure a:last-child {
+    padding: 25px 0 0 5px;
+}
+/* estrutura de navegação*/
+nav {
+    background-color: #000;
+    overflow: auto;
+    clear: both;
+    margin-top: 10px;
+}
+nav ul {
+    list-style: none;
+    padding-left: 0px;
+    margin-top: 1px;
+}
+nav ul li {
+    float: left;
+}
+nav ul a {
+    color: #fff;
+    text-decoration: none;
+    font-size: 1.2em;
+    padding: 8px 50px;
+    line-height: 2em;
+}
+#inicial a[href="index.html"],
+#quemSomos a[href="quem-somos.html"],
+#produtos a[href="produtos.html"],
+#banhoEtosa a[href="banho-e-tosa.html"],
+#curiosidades a[href="curiosidades.html"] {
+    background-color: #C0262C;
+}
+/* estrutura página inicial */
+#inicial aside {
+    width: 230px;
+    float: left;
+    margin-top: 30px;
+}
+#inicial main {
+    width: 490px;
+    float: left;
+    margin: 30px 25px 10px;
+}
+/* rodapé */
+footer {
+    clear: both;
+    border-top: 7px solid #999;
+    background-color: #000;
+    color: #fff;
+    text-align: center;
+    padding: 10px;
+}
+footer p {
+    margin: 0px;
+}
 /* textos da página principal*/
 main h1 {
     color: #C0262C;
