--- a/cap05/projeto/estilos/principal.css
+++ b/cap05/projeto/estilos/principal.css
@@ -343,3 +343,7 @@ input[type="submit"] {
     background-color: rgba(255, 255, 255, 0.7);
     bottom: 0;
 }
+/* controle de áudio */
+aside audio {width: 230px;}
+/* controle de vídeo */
+aside video {width: 230px;}
